--- a/templates/screensaver.html
+++ b/templates/screensaver.html
@@ -27,16 +27,9 @@
     .view.active {
       display: block;
     }
-    .gallery {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      width: 100vw;
-    }
     .gallery img {
-      max-width: 80%;
-      max-height: 80%;
+      width: 100%;
+      height: 100%;
       object-fit: contain;
       background: black;
     }
@@ -92,18 +85,24 @@
     const viewDuration = 10000; // 10 seconds per view
 
     function switchView() {
+      stopSlideshow();
       document.getElementById(views[currentView]).classList.remove('active');
       currentView = (currentView + 1) % views.length;
       document.getElementById(views[currentView]).classList.add('active');
+      if (views[currentView] === 'gallery') {
+        startSlideshow();
+      } else {
+        // For calendar, set timeout to switch back
+        setTimeout(switchView, viewDuration);
+      }
     }
-
-    setInterval(switchView, viewDuration);
 
     // Gallery slideshow
     const imageUrls = {{ image_urls | tojson }};
     console.log('imageUrls:', imageUrls);
     let currentImage = 0;
     let imagesShown = 0;
+    let slideshowTimeout = null;
     const galleryDiv = document.getElementById('gallery-slideshow');
 
     function showNextImage() {
@@ -114,18 +113,31 @@
         currentImage = (currentImage + 1) % imageUrls.length;
         if (imagesShown >= imageUrls.length) {
           // All images shown, switch to next view after 3s
-          setTimeout(() => {
+          slideshowTimeout = setTimeout(() => {
             switchView();
             imagesShown = 0;
           }, 3000);
         } else {
-          setTimeout(showNextImage, 3000);
+          slideshowTimeout = setTimeout(showNextImage, 3000);
         }
       }
     }
 
+    function startSlideshow() {
+      if (imageUrls.length > 0 && !slideshowTimeout) {
+        showNextImage();
+      }
+    }
+
+    function stopSlideshow() {
+      if (slideshowTimeout) {
+        clearTimeout(slideshowTimeout);
+        slideshowTimeout = null;
+      }
+    }
+
     if (imageUrls.length > 0) {
-      showNextImage();
+      startSlideshow();
     } else {
       console.log('No images available for slideshow');
     }
