tuned the screensaver

--- a/templates/kiosk.html
+++ b/templates/kiosk.html
@@ -82,7 +82,7 @@
 
           <div class="mb-3">
             <label for="player_id" class="form-label">{{ _('Enter your Player Number') }}</label>
-            <input type="text" inputmode="numeric" pattern="[0-9]*" class="form-control form-control-lg" id="player_id" name="player_id" required placeholder="123" style="font-size: 1.2rem; text-align: center;">
+            <input type="text" inputmode="numeric" pattern="[0-9]*" class="form-control form-control-lg" id="player_id" name="player_id" required style="font-size: 1.2rem; text-align: center;">
             <div class="form-text">{{ _('Enter your player number to confirm and record the session.') }}</div>
           </div>
 
